--- a/libr/asm/Makefile
+++ b/libr/asm/Makefile
@@ -47,6 +47,7 @@ STATIC_OBJS=$(subst ..,p/..,$(subst asm_,p/asm_,$(STATIC_OBJ)))
 OBJS=${STATIC_OBJS} asm.o acode.o aop.o binutils_as.o aplugs.o
 OBJS+=${SHARED2_OBJ}
 
+ifeq ($(HAVE_GPERF),1)
 OBJS+=d/z80.o
 OBJS+=d/6502.o
 OBJS+=d/i4004.o
@@ -72,5 +73,6 @@ OBJS+=d/arm.o
 OBJS+=d/msp430.o
 OBJS+=d/propeller.o
 OBJS+=d/pic18c.o
+endif
 
 include $(TOP)/libr/rules.mk
